fix: move early bootstrap inside mod
Fabric doesn't allow host class instances to be shared. Only the bytecode is shared.